January 2023 ============ 1.8.0 - Added chmod() and umask() functions - Renamed rmdir(), rmfile(), getdir() and chdir() to rmdir$(), rmfile$(),   getdir$() and chdir$() - Wildcards now supported in chdir$(), opendir(), open(), stat$() and lstat$() - Added optional file permissions parameters to open() and mkdir() - Fixed broken opendir() function - Fixed broken open() function with read and rw mode - Fixed broken -a command line option - Improved efficiency of CIRCLE command - Misc internal code updates - Renamed timer.bas to speed.bas - Removed unnecessary code from input3.bas

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,8 @@ CC=cc -D NO_OS_SET
 #LIBS=-lm -lcrypt
 
 # MacOS
-CC=cc $(LFA)
-LIBS=-lm 
+#CC=cc $(LFA)
+#LIBS=-lm 
 
 # ARM
 #CC=aarch64-poky-linux-gcc --sysroot=/opt/fsl-imx-wayland/4.19-warrior/sysroots/aarch64-poky-linux
